--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                 <form class="card p-4">
                     <label for="">Mensaje</label>
                     <textarea id="mensaje" class="form-control"></textarea>
-                    <button type="submit" class="btn btn-success">Enviar</button>
+                    <button type="submit" class="btn btn-success mt-2">Enviar</button>
                 </form>
             </div>
         </div>
